--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
- 
+ <button class="btn btn-primary">submit</button>
 
 <router-outlet></router-outlet>
