--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,20 @@
 
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
- <button class="btn btn-primary">submit</button>
+  <div class="container-fluid">
+    <H1>Code Particles Enrollment Form</H1>
+    <form>
+      <div class="form-group">
+        <label>Name</label>
+        <input type="text" class="form-control">
+      </div>
 
-<router-outlet></router-outlet>
+      <div class="form-group">
+        <label>Email</label>
+        <input type="email" class="form-control">
+      </div>
+
+      <div class="form-group">
+        <label>Phone</label>
+        <input type="tel" class="form-control">
+      </div>
+    </form>
+  </div>
