--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,5 +16,32 @@
         <label>Phone</label>
         <input type="tel" class="form-control">
       </div>
+     
+      <div class="form-group">
+        <select  class="custom-select">
+          <option selected>I am interested in</option>
+          <option *ngFor="let topic of topics">{{ topic }}</option>
+        </select>
+
+      </div>
+
+    <div class="mb-3">
+      <label>Time Preference</label>
+        <div class="form-check">
+          <input  class="form-check-input" type="radio" name="timePreference" value="morning">
+          <label  class="form-check-label">Morning (9AM-12PM)</label>
+        </div>
+
+        <div class="form-check">
+            <input  class="form-check-input" type="radio" name="timePreference" value="evening">
+            <label  class="form-check-label">Evening (5PM-8PM)</label>
+        </div>
+    </div>
+
+    <div class="form-check mb-3">
+      <input class="form-check-input" type="checkbox">
+      <label class="form-check-label">Send me promotional offers</label>
+    </div>
+      
     </form>
   </div>
