--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,7 @@
       <input class="form-check-input" type="checkbox">
       <label class="form-check-label">Send me promotional offers</label>
     </div>
+    <button class="btn btn-primary" type="submit">Submit Form</button>
       
     </form>
   </div>
