--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,36 @@
 
+  <!--To work with angular forms,you have to import the forms module
+  Any time a form tag is used, angular attaches an ngForm directive to 
+  the form tag which gives us valuable information about that particular form
+  It tells what the values of the different form controls are and whether the values are valid
+  or invalid
+  We get a hold of a reference to this ngForm directive using a template reference variable
+  ngForm directive gives us access to the values of the form controls using the value property
+  We use the ngModel directive to let angular know of the form controls to be tracked
+  With the ngModel directive, the name attribute is very much necessary
+  When you want to create a group or sub group within a from you use ngModelGroup directive
+  Data binding in template driven form we have three directives: ngForm, ngModel and ngFormGroup-->
   <div class="container-fluid">
     <H1>Code Particles Enrollment Form</H1>
-    <form>
+    <form #userForm="ngForm">
+      {{userForm.value | json }}
       <div class="form-group">
         <label>Name</label>
-        <input type="text" class="form-control">
+        <input type="text" class="form-control"name="userName" ngModel>
       </div>
 
       <div class="form-group">
         <label>Email</label>
-        <input type="email" class="form-control">
+        <input type="email" class="form-control" name="email" ngModel>
       </div>
 
       <div class="form-group">
         <label>Phone</label>
-        <input type="tel" class="form-control">
+        <input type="tel" class="form-control" name="phone" ngModel>
       </div>
      
       <div class="form-group">
-        <select  class="custom-select">
+        <select  class="custom-select" name="topic" ngModel>
           <option selected>I am interested in</option>
           <option *ngFor="let topic of topics">{{ topic }}</option>
         </select>
@@ -28,18 +40,18 @@
     <div class="mb-3">
       <label>Time Preference</label>
         <div class="form-check">
-          <input  class="form-check-input" type="radio" name="timePreference" value="morning">
+          <input  class="form-check-input" type="radio" name="timePreference" value="morning" ngModel>
           <label  class="form-check-label">Morning (9AM-12PM)</label>
         </div>
 
         <div class="form-check">
-            <input  class="form-check-input" type="radio" name="timePreference" value="evening">
+            <input  class="form-check-input" type="radio" name="timePreference" value="evening" ngModel>
             <label  class="form-check-label">Evening (5PM-8PM)</label>
         </div>
     </div>
 
     <div class="form-check mb-3">
-      <input class="form-check-input" type="checkbox">
+      <input class="form-check-input" name="subscribe" type="checkbox" ngModel>
       <label class="form-check-label">Send me promotional offers</label>
     </div>
     <button class="btn btn-primary" type="submit">Submit Form</button>
