--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
   <div class="container-fluid">
     <H1>Code Particles Enrollment Form</H1>
     <form #userForm="ngForm">
-      {{userForm.value | json }}
+      {{userForm.value | json }}<!--binding data with ngForm-->
       <div class="form-group">
         <label>Name</label>
         <input type="text" class="form-control"name="userName" ngModel>
