--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,11 +9,12 @@
   We use the ngModel directive to let angular know of the form controls to be tracked
   With the ngModel directive, the name attribute is very much necessary
   When you want to create a group or sub group within a from you use ngModelGroup directive
-  Data binding in template driven form we have three directives: ngForm, ngModel and ngFormGroup-->
+  Data binding in template driven form we have three directives: ngForm, ngModel and ngFormGroup
+  To bind data to a model, we first generate a model class-->
   <div class="container-fluid">
     <H1>Code Particles Enrollment Form</H1>
     <form #userForm="ngForm">
-      {{userForm.value | json }}<!--binding data with ngForm-->
+      {{userForm.value | json }}<!--binding data with ngForm directive-->
       <div class="form-group">
         <label>Name</label>
         <input type="text" class="form-control"name="userName" ngModel>
