--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,3 +65,56 @@
       
     </form>
   </div>
+
+  <!--Form validation in template driven forms-->
+  <div class="container-fluid">
+    <H1>Code Particles Enrollment Form</H1>
+    <form #userForm="ngForm">
+      {{userForm.value | json }}
+
+      <hr>
+      {{userModel | json }}
+      <div class="form-group">
+        <label>Name</label>
+        <input type="text" class="form-control"name="userName" [(ngModel)] = "userModel.name">
+      </div>
+
+      <div class="form-group">
+        <label>Email</label>
+        <input type="email" class="form-control" name="email" [(ngModel)] = "userModel.email">
+      </div>
+
+      <div class="form-group">
+        <label>Phone</label>
+        <input type="tel" class="form-control" name="phone" [(ngModel)] = "userModel.phone">
+      </div>
+     
+      <div class="form-group">
+        <select  class="custom-select" name="topic" [(ngModel)] = "userModel.topic">
+          <option value="">I am interested in</option>
+          <option *ngFor="let topic of topics">{{ topic }}</option>
+        </select>
+
+      </div>
+
+    <div class="mb-3">
+      <label>Time Preference</label>
+        <div class="form-check">
+          <input  class="form-check-input" type="radio" name="timePreference" value="morning" [(ngModel)] = "userModel.timePreference">
+          <label  class="form-check-label">Morning (9AM-12PM)</label>
+        </div>
+
+        <div class="form-check">
+            <input  class="form-check-input" type="radio" name="timePreference" value="evening" [(ngModel)] = "userModel.timePreference">
+            <label  class="form-check-label">Evening (5PM-8PM)</label>
+        </div>
+    </div>
+
+    <div class="form-check mb-3">
+      <input class="form-check-input" name="subscribe" type="checkbox" [(ngModel)] = "userModel.subscribe">
+      <label class="form-check-label">Send me promotional offers</label>
+    </div>
+    <button class="btn btn-primary" type="submit">Submit Form</button>
+      
+    </form>
+  </div>
