--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,19 +66,25 @@
     </form>
   </div>
 
-  <!--Form validation in template driven forms-->
+  <!--Form validation in template driven forms:
+  Angular helps with form validation by tracking 
+  the state of the form controls and applying the appropriate classes
+  Classes applied on form controls based on  it's state and validity are:
+  STATE                          CLASS IF TRUE           CLASS IF FALSE
+The control has been visited     ng-touched              ng-untouched
+The control's value has changed  ng-dirty                ng-pristine
+The control's value is valid     ng-valid                ng-invalid
+-->
   <div class="container-fluid">
     <H1>Code Particles Enrollment Form</H1>
     <form #userForm="ngForm">
-      {{userForm.value | json }}
-
-      <hr>
-      {{userModel | json }}
+      
       <div class="form-group">
-        <label>Name</label>
-        <input type="text" class="form-control"name="userName" [(ngModel)] = "userModel.name">
+        <label>Name</label><!--add a template reference variable #name to the name input
+           element then bind to the input className property-->
+        <input type="text" #name class="form-control"name="userName" [(ngModel)] = "userModel.name">
       </div>
-
+      {{name.className}}
       <div class="form-group">
         <label>Email</label>
         <input type="email" class="form-control" name="email" [(ngModel)] = "userModel.email">
