--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -89,7 +89,7 @@ The property is basically the same with the class with the ng- removed-->
         Then you can easily bind to the different properties-->
         <input type="text"required #name="ngModel" class="form-control"name="userName" [(ngModel)] = "userModel.name">
       </div>
-      {{name.untouched}}
+      {{name.pristine}}
       <div class="form-group">
         <label>Email</label>
         <input type="email" class="form-control" name="email" [(ngModel)] = "userModel.email">
