--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -86,8 +86,12 @@ The property is basically the same with the class with the ng- removed-->
            element then bind to the input className property
           To test for validity, we have to add some sort of a rule,that is required
   NOTE: We get access to the ngModel properties by creating a reference to the ngModel directive
-        Then you can easily bind to the different properties-->
-        <input type="text"required #name="ngModel" class="form-control"name="userName" [(ngModel)] = "userModel.name">
+        Then you can easily bind to the different properties
+      
+      VALIDATION WITH VISUAL FEEDBACK
+      A good user experience is to visually indicate to the user if a form field is 
+      invalid when they enter data-->
+        <input type="text"required #name="ngModel" class="form-control is-invalid"name="userName" [(ngModel)] = "userModel.name">
       </div>
       {{name.valid}}
       <div class="form-group">
