--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -91,9 +91,10 @@ The property is basically the same with the class with the ng- removed-->
       VALIDATION WITH VISUAL FEEDBACK
       A good user experience is to visually indicate to the user if a form field is 
       invalid when they enter data-->
-        <input type="text"required #name="ngModel" class="form-control is-invalid"name="userName" [(ngModel)] = "userModel.name">
+        <input type="text"required #name="ngModel"[class.is-invalid]="name.invalid" class="form-control "name="userName" [(ngModel)] = "userModel.name">
       </div>
-      {{name.valid}}
+  <!--To ensure that the class is applied on when the form control is invalid, we use ngModel
+     properties coupled with class binding-->
       <div class="form-group">
         <label>Email</label>
         <input type="email" class="form-control" name="email" [(ngModel)] = "userModel.email">
