--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -100,9 +100,9 @@ The property is basically the same with the class with the ng- removed-->
         <input type="email" class="form-control" name="email" [(ngModel)] = "userModel.email">
       </div>
 
-      <div class="form-group">
+      <div class="form-group"><!--Let us ensure the phone number is 10 digits-->
         <label>Phone</label>
-        <input type="tel" class="form-control" name="phone" [(ngModel)] = "userModel.phone">
+        <input type="tel" #phone="ngModel" pattern="^\d{10}$" [class.is-invalid]="phone.invalid && phone.touched" class="form-control" name="phone" [(ngModel)] = "userModel.phone">
       </div>
      
       <div class="form-group">
