use class binding with ngModel properties to display error

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -93,7 +93,7 @@ The property is basically the same with the class with the ng- removed-->
       invalid when they enter data-->
         <input type="text"required #name="ngModel"[class.is-invalid]="name.invalid && name.touched"
          class="form-control "name="userName" [(ngModel)] = "userModel.name">
-         <small>Name is required</small><!--Display an error message-->
+         <small [class.d-none]="name.valid || name.untouched">Name is required</small><!--Display an error message-->
       </div>
   <!--To ensure that the class is applied on when the form control is invalid, we use ngModel
      properties coupled with class binding-->
