--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -104,7 +104,9 @@ The property is basically the same with the class with the ng- removed-->
 
       <div class="form-group"><!--Let us ensure the phone number is 10 digits-->
         <label>Phone</label>
-        <input type="tel" #phone="ngModel" pattern="^\d{10}$" [class.is-invalid]="phone.invalid && phone.touched" class="form-control" name="phone" [(ngModel)] = "userModel.phone">
+        <input type="tel" #phone="ngModel" pattern="^\d{10}$" required [class.is-invalid]="phone.invalid && phone.touched"
+         class="form-control" name="phone" [(ngModel)] = "userModel.phone">
+         <small class="text-danger" [class.d-none]="phone.valid || phone.untouched">Phone number is required and must be 10 digits</small>
       </div>
      
       <div class="form-group">
