--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -106,7 +106,13 @@ The property is basically the same with the class with the ng- removed-->
         <label>Phone</label>
         <input type="tel" #phone="ngModel" pattern="^\d{10}$" required [class.is-invalid]="phone.invalid && phone.touched"
          class="form-control" name="phone" [(ngModel)] = "userModel.phone">
-         <small class="text-danger" [class.d-none]="phone.valid || phone.untouched">Phone number is required and must be 10 digits</small>
+         <!--<small class="text-danger" [class.d-none]="phone.valid || phone.untouched">
+           Phone number is required and must be 10 digits</small>-->
+           <div *ngIf="phone.errors && (phone.invalid || phone.touched)">
+             <small class="text-danger" *ngIf="phone.errors.required">Phone number is required</small>
+             <small class="text-danger" *ngIf="phone.errors.pattern">Phone number must be 10 digits</small>
+
+           </div>
       </div>
      
       <div class="form-group">
