--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -115,12 +115,12 @@ The property is basically the same with the class with the ng- removed-->
            </div>
       </div>
      
-      <div class="form-group">
-        <select  class="custom-select" name="topic" [(ngModel)] = "userModel.topic">
+      <div class="form-group"><!--select control validation-->
+        <select required #topic="ngModel" [class.is-invalid]="topic.invalid && topic.touched" class="custom-select" name="topic" [(ngModel)] = "userModel.topic">
           <option value="">I am interested in</option>
           <option *ngFor="let topic of topics">{{ topic }}</option>
         </select>
-
+        <small class="text-danger" [class.d-none]="topic.valid || topic.untouched">Please choose a topic</small>
       </div>
 
     <div class="mb-3">
